Création des DTO de persistance terminé + interface DTO api